--- a/chat/package.json
+++ b/chat/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "llama.rn": "^0.5.8",
+    "moment": "^2.30.1",
     "package-name": "^0.1.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-add-calendar-event": "^5.0.0",
     "react-native-blob-util": "^0.21.2",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-fs": "^2.20.0",
     "react-native-permissions": "^5.3.0"
   },
