--- a/chat/package.json
+++ b/chat/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
     "llama.rn": "^0.5.8",
     "moment": "^2.30.1",
     "package-name": "^0.1.0",
@@ -19,7 +23,12 @@
     "react-native-blob-util": "^0.21.2",
     "react-native-calendar-events": "^2.2.0",
     "react-native-fs": "^2.20.0",
-    "react-native-permissions": "^5.3.0"
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-permissions": "^5.3.0",
+    "react-native-reanimated": "^3.17.3",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
