--- a/chat/package.json
+++ b/chat/package.json
@@ -24,6 +24,7 @@
     "react-native-calendar-events": "^2.2.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
