--- a/chat/android/settings.gradle
+++ b/chat/android/settings.gradle
@@ -1,3 +1,46 @@
+// old code ..
+// pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+// plugins { id("com.facebook.react.settings") }
+// extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
+// rootProject.name = 'chat'
+// include ':app'
+// includeBuild('../node_modules/@react-native/gradle-plugin')
+
+
+// new settings.gradle by grok.
+// pluginManagement {
+//     includeBuild("../node_modules/@react-native/gradle-plugin")
+// }
+// plugins {
+//     id("com.facebook.react.settings")
+// }
+// extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> 
+//     ex.autolinkLibrariesFromCommand()
+// }
+
+// rootProject.name = 'chat'
+// include ':app'
+// includeBuild('../node_modules/@react-native/gradle-plugin')
+
+// dependencyResolutionManagement {
+//     repositories {
+//         google()
+//         mavenCentral()
+//         maven { url 'https://jitpack.io' }
+
+//         // 🔁 Replace with GitHub Maven for Vosk
+//         maven {
+//             url = uri("https://maven.pkg.github.com/alphacep/vosk-api")
+//             credentials {
+//                 username = System.getenv("GITHUB_USERNAME") ?: ""
+//                 password = System.getenv("GITHUB_TOKEN") ?: ""
+//             }
+//         }
+//     }
+// }
+
+
+// vosk offline
 pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
 plugins { id("com.facebook.react.settings") }
 extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
