--- a/chat/tsconfig.json
+++ b/chat/tsconfig.json
@@ -1,3 +1,14 @@
+// {
+//   "extends": "@react-native/typescript-config/tsconfig.json"
+// }
+
+
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
+  }
 }
