--- a/chat/package.json
+++ b/chat/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
@@ -27,6 +28,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.13.3",
     "react-native-permissions": "^5.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.17.3",
