--- a/chat/android/app/src/main/AndroidManifest.xml
+++ b/chat/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,17 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
+
+    
 
     <!-- 📦 Queries for Package Visibility (Required for Android 11+) -->
     <queries>
+    <intent>
+            <action android:name="android.intent.action.SET_ALARM" />
+        </intent>
         <package android:name="com.google.android.youtube" />
         <package android:name="com.google.android.apps.photos" />
         <package android:name="com.google.android.calendar" />
