--- a/chat/package.json
+++ b/chat/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "rtn-my-alarm": "file:RTNMyAlarm"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
